--- a/style.css
+++ b/style.css
@@ -1,67 +1,64 @@
 :root {
-    --accent: #5e31b1; /* Material deep purple 600 */
-    --haccent: #280680; /* Material deep purple xxx */
-}
-@media(prefers-color-scheme: dark) {
-    :root {
-        --accent: #673ab7;  /* Material deep purple 500 */
-        --haccent: #b39ddb; /* Material deep purple 200 */
-    }
+  --accent: #673ab7;  /* Material deep purple 500 */
+  --haccent: #b39ddb; /* Material deep purple 200 */
 }
 body {
-    margin: 0 auto;
-    font-family: 'Roboto';
-    background-image: url("t.png");
-    /* background-size: 64px; */
-    font-weight: 400;
-    color: white;
+  margin: 0 auto;
+  font-family: 'Roboto';
+  background-image: url("img/tile.png");
+  font-weight: 400;
+  color: white;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  position: fixed;
 }
-.contenedor {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 1000px;
-    max-width: 1250px;
-    height: 500px;
-    border-radius: 4px;
-    text-align: center;
+.contenido {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1000px;
+  text-align: center;
+  padding: 16px;
+}
+@media(max-width: 720px) {
+  .contenedor {
     backdrop-filter: blur(4px);
+    height: 100%;
+  }
+  .contenido { width: 95%; }
+  hr { width: 85%; }
+}
+@media(min-width: 721px) {
+  .contenido {
+    border-radius: 4px;
     border: 1px solid #242424;
-    padding: 16px;
     box-shadow: 8px 8px 20px #111111;
+    backdrop-filter: blur(4px);
+    max-width: 85%;
+  }
+  hr { width: 75%; }
 }
 .icono {
-    width: 128px;
-    border-radius: 50%;
+  width: 16px;
+  vertical-align: middle;
+  margin-left: 0.25em;
 }
 h1,h2 {
-    font-weight: 300;
-    font-style: italic;
-}
-hr {
-    width: 75%;
+  font-weight: 300;
+  font-style: italic;
 }
 a {
-    color: var(--accent);
-    text-decoration: none;
-    transition-duration: 500ms;
+  color: var(--accent);
+  text-decoration: none;
+  transition-duration: 500ms;
 }
 a:hover {
-    color: var(--haccent);
-    text-decoration: underline;
+  color: var(--haccent);
+  text-decoration: underline;
 }
-.abajo-derecha {
-    position: absolute;
-    top: 100%;
-    left: 100%;
-    transform: translate(-100%, -100%);
-    padding: 8px;
-    font-weight: 400;
-}
-.abajo-izquierda {
-    position: absolute;
-    top: 100%;
-    transform: translate(0%, -100%);
-    padding: 8px;
-}
+
+.abajo { position: absolute; top: 100%; padding: 8px; }
+.abajo-derecha { left: 100%; transform: translate(-100%, -100%); }
+.abajo-izquierda { transform: translate(0%, -100%); }
